--- a/src/page/scss/MainPage.module.scss
+++ b/src/page/scss/MainPage.module.scss
@@ -1,42 +1,71 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+.header {
+  position: absolute;
+  width: 1920px;
+  height: 82px;
+  top: 37px;
+  border-bottom: 1px solid rgba(126, 134, 142, 1);
+  background-color: black;
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+  &__container {
+    position: relative;
+    height: 100%;
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+    & h1 {
+      font-weight: 500;
+      font-size: 21px;
+      line-height: 143%;
+      color: white;
+    }
   }
-  to {
-    transform: rotate(360deg);
+
+  &__name {
+    position: absolute;
+    left: 0;
+    top: 10px;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+
+
+.location {
+  position: absolute;
+  width: 151;
+  height: 36;
+  top: 46px;
+  left: 1099px;
+  gap: 59px;
+  display: flex;
+  color: white;
+
+
+  /* Стили */
+  &__marker {
+    /* Стили */
+  }
+
+  &__street {
+    /* Стили */
   }
 }
 
-.card {
-  padding: 2em;
-}
 
-.read-the-docs {
-  color: #888;
+
+.contact {
+
+  /* Стили */
+  &__icon {
+    /* Стили */
+  }
+
+  &__containet {
+    /* Стили */
+  }
+
+  &__number {
+    /* Стили */
+  }
+
+  &__work-time {
+    /* Стили */
+  }
 }
